--- a/everis-dar-mytasks-ms/src/main/resources/application.properties
+++ b/everis-dar-mytasks-ms/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.h2.console.enabled=true
 
 #data.sql file
 spring.jpa.defer-datasource-initialization=true
+
+#remove "trace" from ResponseStatusException
+server.error.include-stacktrace=never
