--- a/.github/workflows/master_everis-dar-mytasks-joan.yml
+++ b/.github/workflows/master_everis-dar-mytasks-joan.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        working-directory: everis-dar-mytasks-ms
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
