--- a/everis-dar-mytasks-ms/src/main/resources/application.properties
+++ b/everis-dar-mytasks-ms/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=test
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.test.database.replace=none
-
-#enable the H2 console --> http://localhost:8080/h2-console
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=everis
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #data.sql file
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 
 #remove "trace" from ResponseStatusException
